# dehancer-common-cpp

./: .gitignore  BUILD-docker-ubuntu.md  CMakeLists.txt  CMakePresets.json  DehancerCommon.podspec  DehancerMLutFile.podspec  Dockerfile.cpp-env-ubuntu  README.md  dehancer-common-cpp.pc.in  install_win_vcpkg.sh  version.txt
Classes/MLutFile/: DehancerMLutFile.h  MLutAttributes.swift  MLutBool.swift  MLutColorType.swift  MLutExpandImpact.swift  MLutExpandMode.swift  MLutExposureMode.swift  MLutFile.swift  MLutFilmType.swift  MLutSize.swift  MLutText.swift  MLutType.swift
Classes/MLutFile/Meta/: MLutBoolModel.h  MLutBoolModel.m  MLutColorTypeModel.h  MLutColorTypeModel.m  MLutExpandImpactModel.h  MLutExpandImpactModel.m  MLutExpandModeModel.h  MLutExpandModeModel.m  MLutFilmTypeModel.h  MLutFilmTypeModel.m  MLutModel.h  MLutModel.m  MLutSizeModel.h  MLutSizeModel.m  MLutTextModel.h  MLutTextModel.m  MLutTypeModel.h  MLutTypeModel.m
include/dehancer/: Base64.h  Blowfish.h  CameraLutXmp.h  Common.h  Deferred.h  Expected.h  FileUtils.h  License.h  MLutXmp.h  Semaphore.h  Semaphore.hpp  Subscription.h  Utils.h  version.h.in
include/dehancer/windows/utf8/: utf8.h  winutf8.h
lib/: CMakeLists.txt
lib-common-cpp/: CMakeLists.txt
lib/cmake/: dehancer_common_cpp.cmake
src/: Blowfish.cpp  CameraLutXmp.cpp  Common.cpp  FileUtils.cpp  License.cpp  Log.cpp  MLutXmp.cpp  Semaphore.cpp  Subscription.cpp  Utils.cpp
test/MLutFile-Pod/: Podfile
test/MLutFile-Pod/MLutFile-Pod/: AppDelegate.swift  Info.plist
test/MLutFile-Pod/MLutFile-Pod.xcodeproj/: project.pbxproj
test/MLutFile-Pod/MLutFile-Pod.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
test/MLutFile-Pod/MLutFile-Pod.xcworkspace/: contents.xcworkspacedata
test/MLutFile-Pod/MLutFile-Pod/Base.lproj/: MainMenu.xib
test/MLutFile-Pod/MLutFile-PodTests/: MLutFile_PodTests.swift
tests/: CMakeCommon.in  CMakeLists.txt
tests/cameralut_xmp/: Apple-8_8S_8P-FiLMiC_Pro_Log_V2.clut  CMakeLists.txt  clut.clut  xmp_open.cpp
tests/license/: CMakeLists.txt  license.cpp
tests/license/singletone/: basic.cpp
tests/mlut_xmp/: CMakeLists.txt  mlut.mlut  xmp_open.cpp
tests/semaphore/: CMakeLists.txt  basic.cpp
tests/singleton/: CMakeLists.txt  basic.cpp
tests/sqlite/: CMakeLists.txt  simple.cpp
tests/subscription/: CMakeLists.txt  subscription.cpp
tests/xmp/: CMakeLists.txt  xmp_open.cpp
